<resources>
    <string name="app_name">Part2_3</string>
    <string name="visible_true">visible true</string>
    <string name="hello_world">hello world</string>
    <string name="visible_false">visible false</string>
    <string name="layout_bt2">layout_bt2</string>
    <string name="layout_bt1">layout_bt1</string>
    <string name="long_text">
        세상의 모서리
구부정하게 커버린
골칫거리 outsider
걸음걸이, 옷차림,
이어폰 너머 play list
음악까지 다 minor
넌 모르지
떨군 고개 위
환한 빛 조명이
어딜 비추는지
느려도 좋으니
결국 알게 되길
The one and only
You are my celebrity
잊지마 넌 흐린 어둠 사이
왼손으로 그린 별 하나
보이니 그 유일함이 얼마나
아름다운지 말야
You are my celebrity
celebrity
You are my celebrity
지쳐버린 표정 마치
전원을 꺼놓은 듯이
심장소린 too quiet
네가 가진 반짝거림,
상상력, identity
까지 모조리 diet
넌 모르지
아직 못다 핀
널 위해 쓰여진
오래된 사랑시
헤매도 좋으니
웃음 짓게 되길
The one and only
You are my celebrity
잊지마 넌 흐린 어둠 사이
왼손으로 그린 별 하나
보이니 그 유일함이 얼마나
아름다운지 말야
You are my celebrity
발자국마다 이어진 별자리
그 서투른 걸음이 새겨놓은 밑그림
오롯이 너를 만나러 가는 길
그리로 가면 돼 점선을 따라
잊지마 이 오랜 겨울 사이
언 틈으로 피울 꽃 하나
보이니 하루 뒤 봄이 얼마나
아름다울지 말야
You are my celebrity
celebrity
You are my celebrity
    </string>
</resources>